[2021.02] Start documenting Haskell solution

--- a/_src/tex/preamble.tex
+++ b/_src/tex/preamble.tex
@@ -83,6 +83,8 @@
   }%
 }
 
+\newcommand{\hrefootnote}[2]{\href{#1}{#2}\footnote{\url{#1}}}
+
 
 \usepackage[colorinlistoftodos,prependcaption,textsize=small]{todonotes}
 \newcommand{\todocolor}[3]{%
